<resources>
    <string name="app_name">Угадай страну</string>
    <string name="google_map_api_key">AIzaSyD7TjCrpHaTMya0JNWx3G9f9kkx0wcFWqM</string>

    <string name="btn_to_menu">В главное меню</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="welcome_about">"""&#8226; игра “Угадай страну”\n&#8226; проект Даурова Батыра Хусейновича\n&#8226; группа ИС-31"""</string>
    <string name="welcome_button">Играть</string>
    <string name="summery_title">Результаты 🥳</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="result_info">Всего:</string>
    <string name="result_button">Сыграть еще</string>
    <string name="about_title">⚙ О приложении:</string>
    <string name="about_version">Версия приложения: <b>1.0</b></string>
    <string name="about_name">Название приложения: <b>“Угадай флаг”</b></string>
    <string name="about_author">Автор: <b>Дауров Батыр Хусенович</b></string>
    <string name="about_technologies">Технологии использованные при создании:\n&#8226; <b>Android Studio 2024 (Ladybug)</b>\n&#8226; <b>Figma</b>\n&#8226; <b>ColorHunt</b></string>
    <string name="about_target_title">Цель проекта:</string>
    <string name="about_target">
        - Изучение географии: Позволить игрокам изучать карты и географические особенности различных стран, континентов и регионов.
        \n- Культурное просвещение: Ознакомить игроков с культурными особенностями, архитектурой и традициями различных стран через визуальные подсказки.
        \n- Развитие навыков ориентации: Поспособствовать улучшению навыков чтения карты и ориентации в пространстве.
    </string>
</resources>