<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">
    <FrameLayout android:layout_height="match_parent" android:layout_width="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.22"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_image"
            tools:ignore="ContentDescription" />

        <View android:background="@drawable/gradient_bg_radial" android:layout_height="match_parent" android:layout_width="match_parent"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/about_title"
                android:textAlignment="viewStart"
                android:textColor="@color/accent_color"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/about_version"
                android:textColor="@color/white" />
            <TextView
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/about_name"
                android:textColor="@color/white" />
            <TextView
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/about_author"
                android:textColor="@color/white" />
            <TextView
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/about_technologies"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:layout_marginBottom="9dp"
                android:text="@string/about_target_title"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:text="@string/about_target"
                android:textColor="@color/accent_text_color"
                android:textStyle="italic" />


            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24sp"
                android:backgroundTint="@color/accent_color"
                android:stateListAnimator="@null"
                android:outlineSpotShadowColor="@color/accent_color"
                android:elevation="3dp"
                android:fontFamily="@font/inter_light"
                android:onClick="toMenu"
                android:text="@string/btn_to_menu"
                android:textColor="@color/text_button_color"
                android:textSize="15sp"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>