<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <FrameLayout android:layout_height="match_parent" android:layout_width="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.22"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_image"
            tools:ignore="ContentDescription" />

        <View android:background="@drawable/gradient_bg" android:layout_height="match_parent" android:layout_width="match_parent"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/inter"
                android:text="@string/welcome_title"
                android:textAlignment="center"
                android:textColor="@color/accent_color"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extralight"
                android:text="@string/welcome_about"
                android:textColor="@color/welcome_about_color" />

            <Button

                android:id="@+id/guess_the_place_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24sp"
                android:backgroundTint="@color/accent_color"
                android:elevation="3dp"
                android:fontFamily="@font/inter_semibold"
                android:outlineSpotShadowColor="@color/accent_color"
                android:stateListAnimator="@null"
                android:text="@string/welcome_button"
                android:textColor="@color/text_button_color"
                android:textSize="15sp"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>